<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".copc">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:text="@string/cpi"
        android:textAlignment="center"
        android:textColor="#A39C9C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="368dp"
        android:layout_height="630dp"
        android:background="@color/white"
        android:backgroundTint="#200C0C0C"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COOPC"
        android:textColor="#00AC11"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="368dp"
        android:layout_height="570dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.89">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/rutc1"
                android:layout_width="308dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:text="@string/na"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view3"
                android:layout_width="400dp"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/rutc2"
                android:layout_width="308dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:text="@string/nb"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/rutc3"
                android:layout_width="308dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:text="@string/nc"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/rutc4"
                android:layout_width="308dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:text="@string/nd"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/volcc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>