<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rutas">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibp"
                android:layout_width="350dp"
                android:layout_height="230dp"
                android:adjustViewBounds="true"
                android:backgroundTint="#00AC11"
                android:contentDescription="@string/COOPPO"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/portoviejo"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <Button
                android:id="@+id/bp"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:text="@string/COOPPO"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <ImageButton
                android:id="@+id/ibh"
                android:layout_width="350dp"
                android:layout_height="230dp"
                android:adjustViewBounds="true"
                android:backgroundTint="#00AC11"
                android:contentDescription="@string/COOPH"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/higueron"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/bh"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:text="@string/COOPH"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <ImageButton
                android:id="@+id/ibc"
                android:layout_width="350dp"
                android:layout_height="230dp"
                android:adjustViewBounds="true"
                android:backgroundTint="#00AC11"
                android:contentDescription="@string/COOPC"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/cvalle"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/bc"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:text="@string/COOPC"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <ImageButton
                android:id="@+id/ibpi"
                android:layout_width="350dp"
                android:layout_height="230dp"
                android:adjustViewBounds="true"
                android:backgroundTint="#00AC11"
                android:contentDescription="@string/COOPPI"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/picoaza"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/bpi"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:text="@string/COOPPI"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/vol"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>